# dualres

./: .gitignore  AUTHORS.txt  CMakeLists.txt  COPYRIGHT.txt  Makefile  README.md
cmake/Modules/: FindFFTW.cmake  FindNLOPT.cmake
include/: CommandParser.h  FFTWWisdomCommandParser.inl  GPMCommandParser.inl  HMCParameters.h  MultiResData.h  MultiResData2.h  MultiResParameters.h  NeighborhoodCommandParser.inl  circulant_base.h  circulant_base.inl  data_types.inl  defines.h  dualres.hpp  eigen_indexing.inl  eigen_slicing.inl  estimate_kernel_parameters.h  extra_math.h  gaussian_process_model.h  interpolation_matrix.h  kernels.h  kernels.inl  krigging_matrix.h  kriging_matrix.h  nifti_manipulation.h  perturbation_matrix.h  utilities.h  utilities.inl
include/dualres/: .#gaussian_process_model.h  CommandParser.h  HMCParameters.h  MultiResData.h  MultiResParameters.h  MultiResParameters2.h  ansi.h  circulant_base.h  defines.h  eigen_slicing.h  estimate_kernel_parameters.h  extra_distributions.h  gaussian_process_model.h  kernels.h  kriging_matrix.h  nifti_manipulation.h  perturbation_matrix.h  sized_fft.h  smoothing.h  utilities.h
include/dualres/impl/: circulant_base.inl  kernels.inl  nifti_manipulation.inl  utilities.inl
include/dualres/impl/CommandParser/: EstimRbfCommandParser.inl  FFTWWisdomCommandParser.inl  GPMCommandParser.inl  KrigingCommandParser.inl  NeighborhoodCommandParser.inl  SmoothingCommandParser.inl
lib/nifti/utils/: nifti_tool
src/: CMakeLists.txt  clear_fftw_history.cpp  dualgpm.cpp  dualresGP.cpp  estimateRbfParameters.cpp  estimate_rbf.cpp  estimate_snr.cpp  gaussian_smooth.cpp  image_dimensions.cpp  image_info.cpp  interpolate.cpp  preplanFFT.cpp  preplan_fft.cpp  rbfNeighborhood.cpp  rbf_neighborhood.cpp  simulate_data_from_image.cpp  write_kriging_matrix.cpp
